--- a/Wiley-AuthoringTemplate.sty
+++ b/Wiley-AuthoringTemplate.sty
@@ -2040,12 +2040,15 @@ No query.\par%
 %----------------------------------------------------------------------------------------
 %	PAGE HEADERS
 %----------------------------------------------------------------------------------------
+%----------------------------------------------------------------------------------------
+%	PAGE HEADERS
+%----------------------------------------------------------------------------------------
 
 \usepackage{fancyhdr} % Requilightblue for header and footer configuration
 
 \pagestyle{fancy}
-\renewcommand{\chaptermark}[1]{\markboth{\sffamily\normalsize\bfseries #1}{}} % Chapter text font settings
-\renewcommand{\sectionmark}[1]{\markright{\bfseries\normalsize\thesection\hspace{5pt}#1}{}} % Section text font settings
+\renewcommand{\chaptermark}[1]{\markboth{\rmfamily\normalsize\bfseries #1}{}} % Chapter text font settings
+\renewcommand{\sectionmark}[1]{\markright{\bfseries\itshape\normalsize\thesection\hspace{5pt}#1}{}} % Section text font settings
 \fancyhf{} \fancyhead[LE,RO]{\bfseries\normalsize\thepage} % Font setting for the page number in the header
 \fancyhead[LO]{\rightmark} % Print the nearest section name on the left side of odd pages
 \fancyhead[RE]{\leftmark} % Print the current chapter name on the right side of even pages
@@ -2053,6 +2056,7 @@ No query.\par%
 \addtolength{\headheight}{2.5pt} % Increase the spacing around the header slightly
 \renewcommand{\footrulewidth}{0pt} % Removes the rule in the footer
 \fancypagestyle{plain}{\fancyhead{}\renewcommand{\headrulewidth}{0pt}} % Style for when a plain pagestyle is specified
+
 % Removes the header from odd empty pages at the end of chapters
 \makeatletter
 \renewcommand{\cleardoublepage}{
@@ -2063,6 +2067,28 @@ No query.\par%
 \newpage
 \fi}
 
+%\usepackage{fancyhdr} % Requilightblue for header and footer configuration
+%
+%\pagestyle{fancy}
+%\renewcommand{\chaptermark}[1]{\markboth{\sffamily\normalsize\bfseries #1}{}} % Chapter text font settings
+%\renewcommand{\sectionmark}[1]{\markright{\bfseries\normalsize\thesection\hspace{5pt}#1}{}} % Section text font settings
+%\fancyhf{} \fancyhead[LE,RO]{\bfseries\normalsize\thepage} % Font setting for the page number in the header
+%\fancyhead[LO]{\rightmark} % Print the nearest section name on the left side of odd pages
+%\fancyhead[RE]{\leftmark} % Print the current chapter name on the right side of even pages
+%\renewcommand{\headrulewidth}{0.5pt} % Width of the rule under the header
+%\addtolength{\headheight}{2.5pt} % Increase the spacing around the header slightly
+%\renewcommand{\footrulewidth}{0pt} % Removes the rule in the footer
+%\fancypagestyle{plain}{\fancyhead{}\renewcommand{\headrulewidth}{0pt}} % Style for when a plain pagestyle is specified
+%% Removes the header from odd empty pages at the end of chapters
+%\makeatletter
+%\renewcommand{\cleardoublepage}{
+%\clearpage\ifodd\c@page\else
+%\hbox{}
+%\vspace*{\fill}
+%%\thispagestyle{empty}
+%\newpage
+%\fi}
+%
 %----------------------------------------------------------------------------------------
 %	THEOREM STYLES
 %----------------------------------------------------------------------------------------
